fixed horizontal scrolling with .content-wrapper overflow-x:hidden

--- a/_scss/_futbolismo.scss
+++ b/_scss/_futbolismo.scss
@@ -250,7 +250,7 @@ div.navbar.smaller > .container {
 	/*position: absolute;
 	top: 520px;*/
 	width: 100%;
-
+	overflow-x: hidden;
 	z-index: 999;
 	background: none repeat scroll 0% 0% #FFF;
 
